--- a/05-module-twice/css/header.css
+++ b/05-module-twice/css/header.css
@@ -1,4 +1,4 @@
-admin-app-header{
+.admin-app-header{
 	width:100%;
 	height: 65px;
 	background-color: white;
@@ -36,6 +36,7 @@ admin-app-header{
 }
 
 .admin-app-header .submenu{
+	height: 70px;
 	background-color: white;
 	border: 1px solid #d2d2d2;
 	border-top: 5px solid black;
