--- a/05-module-twice/css/stage.css
+++ b/05-module-twice/css/stage.css
@@ -1,8 +1,9 @@
 .admin-app-stage{
 	position: absolute;
+	height: 480px;
 	top: 70px;
 	left: 200px;
 	bottom: 0;
 	right: 0;
-	background-color: white;
+	/*background-color: white;*/
 }
